--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100);
 html, body {
 	height: 100%;
 	width: 100%;
@@ -23,12 +24,15 @@ div[ui-view] {
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
 	background-size: cover;
+	overflow:scroll;
 }
 
 .navbar {
 	margin-bottom: 0;
 	border-radius: 0;
 }
+
+]
 
 #home h1 {
 	text-align: center;
@@ -49,11 +53,13 @@ img {
 
 #about {
 	text-align: center;
+	font-family: 'Roboto', sans-serif;
 }
 
 #about h1 {
 	margin: 0;
 	text-align: center;
+	color: white;
 }
 
 #about img {
@@ -63,10 +69,13 @@ img {
 
 #about p {
 	color: white;
+	display: inline-block;
+	text-align: justify;
+	font-size: 15px
 }
 
 #albums {
-	/*background-image: url(http://i.imgur.com/RgSIK1T.jpg);*/
+	background-image: url(http://fullhdpictures.com/wp-content/uploads/2015/10/Galaxy-Background.jpg);
 	background-color: black;
 	overflow: scroll;
 	height: 100%;
