--- a/views/projects.html
+++ b/views/projects.html
@@ -1,7 +1,7 @@
 <h1>Projects</h1>
 
 <div id='projectsContainer'>
-  <div id='hangman'>
+  <div class='project'>
     <a href='http://k-buffum.github.io/Project1WDI/' class='projectTitle'><img src='images/hangman.png' id='HM-Pic'></a>
     <br>
     <br>
@@ -16,7 +16,7 @@
     </span>
   </div>
 
-  <div id='dogMeetUp'>
+  <div class='project'>
     <a href='https://dog-meetup.herokuapp.com/' class='projectTitle'><img src='images/dogMeetUp.png' id='DMU-Pic'></a>
     <br>
     <br>
@@ -27,10 +27,13 @@
       Dog MeetUp was inspired by the frustrations I faced when taking my dog to a dog park and finding no other dogs to socialize my dog with.
       As a user you can determine the number and size of dogs you are bringing to the dog park.
       After choosing a time and location you plan to take your dog, you can view a chart displaying the number of dogs scheduled to be at your selected dog park through out the day.
+
     </span>
+    <br>
+    <br>
   </div>
 
-  <div id='rainyDay'>
+  <div class='project'>
     <a href='http://rainydayapp.herokuapp.com/' class='projectTitle'><img src='images/rainyDay.png' id='RD-Pic'></a>
     <br>
     <br>
