the boss site with facts, embedded videos and some styling

--- a/views/facts.html
+++ b/views/facts.html
@@ -1,12 +1,9 @@
-<p>{{ fact }}</p>
-<p>{{ facts[0].header }}</p>
-<p>{{ facts[0].body }}</p>
-<p>Source: {{ facts[0].source }}</p>
-
-<p>{{ facts[1].header }}</p>
-<p>{{ facts[1].body }}</p>
-<p>Source: {{ facts[1].source }}</p>
-
-<p>{{ facts[2].header }}</p>
-<p>{{ facts[2].body }}</p>
-<p>Source: {{ facts[2].source }}</p>
+<div class="container">
+	<div class="well" id="facts" ng-repeat="fact in facts track by $index">
+		<h1 id="facts-header">{{ fact.header }}</h1>
+		<hr />
+		<p id="facts-body">{{ fact.body }}</p>
+		<br />
+		<p id="facts-source"><a href="{{ fact.source }}">Source: {{ fact.source }}</a></p>
+	</div>
+</div>
