routes are down. site looks a bit prettier

--- a/views/about.html
+++ b/views/about.html
@@ -1,2 +1,59 @@
-<h3>this is the about page</h3>
-  <div>{{ aboutText }} </div>
+<h3>FAQs</h3>
+  <div class="row">
+
+    <div class="col-sm-6 col-md-6 well">
+      <h4>HOW CAN I SEND A FAN LETTER TO LUCASFILM?
+      </h4>
+      <p>Correspondence to Lucasfilm can be mailed to: Attn: Fan Mail, P.O. Box 29901, San Francisco, CA 94129-0901
+
+Please Note: Lucasfilm does not accept unsolicited submissions of any kind which may contain any product, artwork, story idea, or other creative material. Unsolicited submissions will be returned to sender.</p>
+    </div>
+    <div class="col-sm-6 col-md-6 well">
+    <h4>HOW CAN I GET A TOUR OF LUCASFILM AND ILM?
+    </h4>
+    <p>Lucasfilm's campuses are working production facilities and therefore we do not offer public tours. The public is invited to visit and enjoy the 17 acres of beautifully landscaped public property (as well as the iconic Yoda fountain) at the Letterman Digital Arts Center in the Presidio of San Francisco, CA.</p>
+    </div>
+     <div class="col-sm-6 col-md-6 well">
+     <h4>HOW CAN I GET APPROVAL TO USE A PHOTOGRAPH OR FILM CLIP?
+      </h4>
+      <p>Lucasfilm manages the rights to films in the Star Wars saga and the Indiana Jones trilogy, as well as Red Tails, Tucker: The Man and His Dream, Willow, Labyrinth, and Strange Magic, and requests related to those films should be directed to ClipAndStill@Lucasfilm.com.
+
+      Clearances for American Graffiti are managed by Universal Studios Home Video; clearances for THX 1138 are managed by Warner Bros. Home Video.
+
+      For questions related to George Lucas' student films, you may contact Publicity@SkywalkerRanch.com or the USC School of Cinematic Arts.</p>
+    </div>
+    <div class="col-sm-6 col-md-6 well">
+      <h4>WHERE CAN I FIND INFORMATION ABOUT THE LETTERMAN DIGITAL ARTS CENTER AT THE PRESIDIO?
+      </h4>
+      <p>For information on each of Lucasfilm's campuses, please see the campus section of our website.</p>
+    </div>
+    <div class="col-sm-6 col-md-6 well">
+      <h4>HOW DO I REQUEST A LICENSE TO SCREEN ANY OF THE STAR WARS MOVIES?</h4>
+      <p>While we are thrilled with the continued interest in our films, we are currently unable to give permission for the Star Wars movies to be publicly screened at this time.
+
+      For questions regarding other properties, please contact Publicity@Lucasfilm.com.</p>
+    </div>
+    <div class="col-sm-6 col-md-6 well">
+      <h4>I'M A MEMBER OF THE MEDIA AND NEED INFORMATION ABOUT LUCASFILM.</h4>
+      <p>You can email the Publicity Department at Publicity@Lucasfilm.com and we will get back to you as soon as possible.</p>
+    </div>
+    <div class="col-sm-6 col-md-6 well">
+      <h4>FOR SCHOOL PROJECTS AND RESEARCH, WHAT IS THE BEST SOURCE OF INFORMATION ABOUT LUCASFILM?</h4>
+      <p>We recommend the following resources:
+
+      The Cinema of George Lucas (Harry N. Abrams; 2005)
+      The Making of Star Wars (Random House; 2007)
+      Rogue Leaders: The Story of LucasArts (Chronicle Books; 2008)
+      Industrial Light & Magic: The Art of Special Effects (Del Rey, 1986)
+      The Complete Making of Indiana Jones (Random House, 2008)
+      Industrial Light & Magic: Into the Digital Age (Del Rey, 1996)</p>
+    </div>
+    <div class="col-sm-6 col-md-6 well">
+      <h4>HOW DO I GET A JOB OR INTERNSHIP AT LUCASFILM?</h4>
+      <p>All open jobs and internship opportunities can be found at our employment site.</p>
+    </div>
+    <div class="col-sm-6 col-md-6 well">
+      <h4>HOW CAN I CONTACT CAST MEMBERS OF THE STAR WARS FILMS OR OTHER LUCASFILM PRODUCTIONS?</h4>
+      <p>The cast of the Star Wars saga can be contacted through their individual publicists or agents.</p>
+    </div>
+  </div>
