--- a/views/main.html
+++ b/views/main.html
@@ -1,2 +1,3 @@
-<h3>home page</h3>
-<h4> {{ mainText}} </h4>
+<div class="well">
+  <img src="https://i.kinja-img.com/gawker-media/image/upload/d8dclcgmbxdcxfybavp6.gif">
+</div>
