--- a/views/films.html
+++ b/views/films.html
@@ -1,15 +1,25 @@
 <div>
-        <input type="integer" ng-model="movieId">
-        <button ng-click="getMovie(movieId)">Get</button>
-        <button ng-click="getAll()">All</button>
+  <input type="integer" ng-model="movieId">
+  <button ng-click="getMovie(movieId)">Get</button>
+  <button ng-click="getAll()">All</button>
 </div>
 
 <div ng-if="loading">
-    Loading...
+  Loading...
 </div>
 
+<!-- Iterate through the films array and display each film -->
 <div ng-if="!loading" class="well" ng-repeat="film in films">
-    <h2>{{ film.title }}</h2>
-    <h4>Directed by: {{ film.director }}</h4>
-    <p>{{ film.opening_crawl }}</p>
+  <h2>{{ film.title }}</h2>
+  <h4>Directed by: {{ film.director }}</h4>
+
+    <!-- attempts to loop through characters within films, even though it'd only return a url
+
+    <p>Characters: <br>
+    <span ng-repeat="character in film.characters">
+      {{ character.characters }}</span></p>
+
+      -->
+
+  <p>{{ film.opening_crawl }}</p>
 </div>
