All routes work, some experiemental front end work

--- a/views/about.html
+++ b/views/about.html
@@ -1,2 +1,7 @@
 <h1>The About page</h1>
-<h2>{{aboutText}}</h2>
+
+<div class="container">
+  <p>Hello my name is Joe Marzullo and I'm a Seattle based web developer who is able to bring your ideas to life. I have a passion for creating real products from ideas at any stage, and will use this passion to create a project that exceeds your expectations. Challenges may arise, but finding innovative solutions is part of the creative adventure that I love. </p>
+</div>
+
+
