--- a/views/main.html
+++ b/views/main.html
@@ -1,2 +1,15 @@
-<h1>The main page!</h1>
-<h2>{{mainText}}</h2>
+<h1>Bring out your dead</h1>
+
+<img src="img/dedMoot.jpg">
+
+<div class="audio">
+
+  <h4>Gods or Monsters</h4>
+  <audio src="audio/gods_or_monsters.mp3" controls></audio>
+
+
+  <h4>Obtuce Truce</h4>
+  <audio src="audio/obtuce_truce.mp3" controls></audio>
+
+</div>
+
