--- a/views/contact.html
+++ b/views/contact.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-xs-12 col-md-4 well">
     <img id="darth" src="/img/darth-vader.png">
-    <p>Darth Vader, also known as Anakin Skywalker, is a fictional character in the Star Wars universe.[1][2][3] Vader appears in the original trilogy as a pivotal figure whose actions drive the plot of the first three films while his past as Anakin Skywalker, and the story of his corruption, is central to the prequel trilogy.<br><br><br></p>
+    <p>Darth Vader, also known as Anakin Skywalker, is a fictional character in the Star Wars universe.[1][2][3] Vader appears in the original trilogy as a pivotal figure whose actions drive the plot of the first three films while his past as Anakin Skywalker, and the story of his corruption, is central to the prequel trilogy.</p>
   </div>
   <div class="col-xs-12 col-md-4 well">
     <img id="luke" src="/img/luke.png">
@@ -11,6 +11,6 @@
   </div>
   <div class="col-xs-12 col-md-4 well">
     <img id="leia" src="/img/leia.png">
-    <p>Princess Leia Organa, later known as General Leia Organa, is a fictional character in the Star Wars franchise, portrayed in films by Carrie Fisher. Introduced in the original Star Wars film (1977), Leia is princess of the planet Alderaan, a member of the Imperial Senate and an agent of the Rebel Alliance.<br><br><br></p>
+    <p>Princess Leia Organa, later known as General Leia Organa, is a fictional character in the Star Wars franchise, portrayed in films by Carrie Fisher. Introduced in the original Star Wars film (1977), Leia is princess of the planet Alderaan, a member of the Imperial Senate and an agent of the Rebel Alliance.</p>
   </div>
 </div>
