--- a/views/main.html
+++ b/views/main.html
@@ -1,24 +1,18 @@
 
 
-<div class="max-width">
-  <div class="flex small-12 columns text-center">
-    <div class="projects" ng-repeat="(key, project) in projects track by $index">
+<!-- <div class="header-img">
+  <img src="http://placehold.it/800x600" alt="">
+</div> -->
 
-      <div class="flip-container" onclick="this.classList.toggle('hover');">
-        <div class="flipper">
-          <div class="front">
-            <!-- front content -->
-            <img src="http://placehold.it/{{project.img}}" alt="">
-          </div>
-          <div class="back">
-            <!-- back content -->
-            <div class="subtitle">{{project.title}}</div>
-          </div>
-        </div>
-      </div>
-
-
-
-    </div>
-  </div>
+<div class="top-text text-center small-12 columns">
+  <h3>
+    RENO MCKENZIE
+  </h3>
+  <h5>
+    Reno is an Web Developer based in Seattle.
+    He seeks and creates elegant code while
+    maintaining efficiency.
+  </h5>
 </div>
+
+
