--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,12 @@ body {
 /*      Header     */
 /* --------------- */
 
+.header {
+  float: right;
+  padding-right: 50px;
+  padding-top: 50px;
+}
+
 /*.header {
   padding-top: 20px;
   background-color: white;
@@ -29,7 +35,7 @@ body {
 }*/
 
 .top-text {
-  margin: 100px 0 50px 0;
+  margin: 50px 0 50px 0;
 }
 
 .top-text h3 {
@@ -79,6 +85,22 @@ body {
   text-decoration: none;
   color: #272727 !important;
 }
+
+/* --------------- */
+/*     Profile     */
+/* --------------- */
+
+.profile {
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+
+.img-circle {
+  width: 200px;
+  border-radius: 50%;
+  margin-bottom: 50px;
+}
+
 
 
 /* --------------- */
