--- a/css/styles.css
+++ b/css/styles.css
@@ -17,23 +17,6 @@ body {
   padding-top: 50px;
 }
 
-/*.header {
-  padding-top: 20px;
-  background-color: white;
-  height: 80px;
-  border-bottom: 3px solid #dadada;
-}
-
-.links li{
-  margin-right: 20px;
-  display: inline;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 200;
-  font-size: 16pt;
-  text-decoration: none;
-  color: #272727 !important;
-}*/
-
 .top-text {
   margin: 50px 0 50px 0;
 }
@@ -50,31 +33,10 @@ body {
   margin: 0 auto;
 }
 
-/*.header-img {
-  height: 500px;
-  overflow-y: hidden;
-  margin-bottom: 40px;
-}
-
-.header-img img {
-  width: 100%;
-}*/
-
 /* --------------- */
 /*     Footer      */
 /* --------------- */
-/*
-.footer-parent {
-  position: relative;
-}*/
-/*.footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: white;
-  border-top: 2px solid #eaeaea;
-  height: 40px;
-}*/
+
 
 .links li{
   margin-right: 20px;
@@ -132,8 +94,22 @@ body {
 
 }
 
-/*
-.subtitle {
-  padding-top: 10px;
-  background-color: white;
-}*/
+/* Greyscale images - color when hovered on*/
+.front img {
+  -webkit-transition: .2s ease-in-out;
+  -moz-transition: .2s ease-in-out;
+  -o-transition: .2s ease-in-out;
+  -moz-filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+}
+.front img:hover {
+  -webkit-transition: .2s ease-in-out;
+  -moz-transition: .2s ease-in-out;
+  -o-transition: .2s ease-in-out;
+  -moz-filter: grayscale(1);
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
+}
+
+
