--- a/views/projectlist.html
+++ b/views/projectlist.html
@@ -7,11 +7,14 @@
           <div class="front" ng-style="project.infoColor">
             <!-- front content -->
             <img src="img/{{project.cover}}" ng-hide="project.info" alt="">
+            <div class="front-title">
+              <h3><i>{{project.infoTitle}}</i></h3>
+            </div>
           </div>
           <div class="back">
             <!-- back content -->
             <div class="subtitle">
-              <a href="#/projects/{{key}}">{{project.title}}</a>
+              <a ng-click href="#/projects/{{key}}">{{project.title}}</a>
             </div>
           </div>
         </div>
