--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,17 @@ h1 {
 	background-color: rgba(80%, 80%, 80%, .5);
 	padding: 15px;
 }
+.footer {
+	background-color: #333333;
+	display: flex;
+	color: white;
+	padding: 30px 30px;
+}
+.footer a {
+	text-decoration: none;
+	color: white;
+	padding-left: 5px;
+}
+.footer a:hover {
+	color: rebeccapurple;
+}
