added some more content

--- a/views/beaches.html
+++ b/views/beaches.html
@@ -4,11 +4,13 @@
 	Did you know that Seattle has 149 "secret" beaches? These are characterized by unoccupied land between a street end and the shoreline. They are public land, and are often preserved and maintained by the city. Some however are overgrown, unmarked and may be harder to reach, but if you're the adventurous type, go for it! 
 	</p>
 	<p class="main-p">
-	Below is a list of the top easily accessable secret beaches, as well as a link to a map of all of them.
+	Below is a list of the top easily accessable secret beaches, as well a map of all of them.
 	</p>
-	<div class="park-list" ng-repeat="park in parkList">
-	<h2>{{park.name}}</h2>
-	<strong>{{park.address}}</strong><br>
-	<p class="park-desc">{{park.description}}</p>
+	
+	<div class="map">
+	<p class="main-p">
+	Locations marked in green are worth a visit.<br>
+	<img src="https://www.theurbanist.org/wp-content/uploads/2015/07/Screen-Shot-2015-07-08-at-9.44.02-PM.png">
+	</p>
 	</div>
 </div>
