--- a/views/gems.html
+++ b/views/gems.html
@@ -3,7 +3,7 @@
 	<p class="main-p">
 		These parks are the usually smaller, lesser known parks of Seattle. Even living in Seattle your whole life, you may have never been to or heard of some of these. But, some of them are definitely not worth missing out on! Be sure to check out these hidden parks scattered throughout the city.
 	</p>
-	<div class="park-list" ng-repeat="park in parkList">
+	<div class="park-list" ng-repeat="park in gparkList">
 	<h2>{{park.name}}</h2>
 	<strong>{{park.address}}</strong><br>
 	<p class="park-desc">{{park.description}}</p>
