--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
+body {
+  padding-top: 70px;
+}
+
 .sponsor-pic{
   height: 200px;
   width: 200px;
-  border: 3px solid black;
+  border: 3px solid #222;
   border-radius: 10px;
 }
 
 .sponsors-container{
   display: flex;
   flex-wrap: wrap;
-  width: 90vw;
 }
 
 .sponsor-div{
