--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,5 @@
-<h1>Page: {{name}}</h1>
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>Welcome to Tech Expo 2017</p>
+  <p><a class="btn btn-primary btn-lg" ui-sref="about" role="button">Learn more</a></p>
+</div>
