--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,13 @@
 body {
   padding-top: 70px;
+  padding-bottom: 70px;
 }
 
-.sponsor-pic{
-  height: 200px;
-  width: 200px;
-  border: 3px solid #222;
-  border-radius: 10px;
+.thumbnail .sponsor-pic{
+  height: 150px;
 }
 
-.sponsors-container{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.sponsor-div{
-  padding: 10px;
+.sponsor-panel-pic{
+  width: 150px;
+  height: 150px;
 }
