--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -6,19 +6,27 @@
       </div>
     </div>
     <div class="panel-body">
-      <p>{{sponsors[id].about}}</p>
       <p>Sponsor Tier: <strong>{{sponsors[id].donationTier}}</strong></p>
-      <img ng-src="{{sponsors[id].image}}" />
+      <p>{{sponsors[id].about}}</p>
+      <img ng-src="{{sponsors[id].image}}" class="sponsor-panel-pic"/>
+    </div>
+    <div class="panel-footer">
+      <button ui-sref="sponsors({id: ''})" class="btn btn-sm btn-primary">Back</button>
     </div>
   </div>
 
 </div>
 
-<div class="container sponsors-container" ng-hide="id">
-  <div class="sponsor-div" ng-repeat="sponsor in sponsors track by $index">
-    <a ui-sref="sponsors({id: {{$index}}})"><img class="sponsor-pic" ng-src="{{sponsor.image}}" /></a>
-  </div>
-  <div class="sponsor-div" ng-repeat="sponsor in sponsors track by $index">
-    <a ui-sref="sponsors({id: {{$index}}})"><img class="sponsor-pic" ng-src="{{sponsor.image}}" /></a>
+<div class="row" ng-hide="id">
+  <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 col-md-3" ng-repeat="sponsor in sponsors track by $index">
+    <div class="thumbnail">
+      <div class="">
+        <a ui-sref="sponsors({id: {{$index}}})"><img class="sponsor-pic" ng-src="{{sponsor.image}}" /></a>
+      </div>
+      <div class="caption">
+        <h3><a ui-sref="sponsors({id: {{$index}}})">{{sponsor.name}}</a></h3>
+        <p>Sponsor Tier: <strong>{{sponsor.donationTier}}</strong></p>
+      </div>
+    </div>
   </div>
 </div>
