added website pages to each page

--- a/views/sponsors.html
+++ b/views/sponsors.html
@@ -8,6 +8,7 @@
     <div class="panel-body">
       <p>Sponsor Tier: <strong>{{sponsors[id].donationTier}}</strong></p>
       <p>{{sponsors[id].about}}</p>
+      <a href="http://{{sponsors[id].website}}"><p>{{sponsors[id].website}}</p></a>
       <img ng-src="{{sponsors[id].image}}" class="sponsor-panel-pic"/>
     </div>
     <div class="panel-footer">
