Add photos, add content to tutorial

--- a/views/history.html
+++ b/views/history.html
@@ -23,6 +23,7 @@
     In a somewhat ironic twist it is the analogue-based Roland machines that have endured over time as the Linn sound became somewhat overused and dated by the end of the decade. The TR-808 and TR-909's beats have since been widely featured in pop music, and can be heard on countless recordings up to the present day. Because of its bass and long decay, the kick drum from the TR-808 has also featured as a bass line in various genres such as hip hop and drum and bass. Since the mid-1980s, the TR-808 and TR-909 have been used on more hit records than any other drum machine, and has thus attained an iconic status within the music industry.
   </p>
   <hr>
+  <img src="/img/tr-808.png" alt="" />
 </div>
 
 <button ng-click="showMPC = !showMPC">Akai MPC</button>
@@ -34,6 +35,7 @@
     A major influence to Roger Linn's design was his love of rubber pads and how they could be pushed, prodded, and banged; this can be seen clearly in his designs especially from the MPC-60 onwards. Linn also had a passion for squares: thus, no round pads on the MPC Series. Later models feature increasingly powerful sampling, storage, interfacing and sound manipulation facilities, which broaden the use of instrument beyond just drum and rhythm tracks.
   </p>
   <hr>
+  <img src="/img/mpc.jpg" alt="" />
 </div>
 
 <button ng-click="showMaschine = !showMaschine">Native Instruments Maschine</button>
