--- a/views/tutorial.html
+++ b/views/tutorial.html
@@ -1,1 +1,40 @@
 <h1>This is tutorial</h1>
+  <div class="tutorialContent">
+
+  <div ng-mouseenter="showSlicing=true" ng-mouseleave="showSlicing=false" style="height: 230px; width: 400px; background-color: orange; margin: 10px;">
+    <div ng-show="showSlicing" style="border: 2px dotted black;">
+      <p>
+        <h3>Slicing (Chopping)</h3>
+        Simply put, slicing (chopping) is a process whereby a piece of audio recording is taken and cut into shorter segments. This then allows the user to use these segments (slices) to create their own arrangements in their compositions. The beauty of this process is one of versatility and flexibility. Additionally, you can drop Rex files into your audio sequencer and match them to any tempo without having to time stretch etc.
+      </p>
+    </div>
+  </div>
+
+  <div ng-mouseenter="showStretching=true" ng-mouseleave="showStretching=false" style="height: 330px; width: 400px; background-color: orange; display: inline-block; margin: 10px;">
+    <div ng-show="showStretching" style="border: 2px dotted black;">
+      <p>
+        <h3>Time Stretching / Pitch Shifting</h3>
+        Time stretching is the process of changing the speed or duration of an audio signal without affecting its pitch. Pitch scaling or pitch shifting is the opposite: the process of changing the pitch without affecting the speed. Similar methods can change speed, pitch, or both at once, in a time-varying way.
+      </p>
+      <p>
+        These processes are used, for instance, to match the pitches and tempos of two pre-recorded clips for mixing when the clips cannot be reperformed or resampled. (A drum track containing no pitched instruments could be moderately resampled for tempo without adverse effects, but a pitched track could not). They are also used to create effects such as increasing the range of an instrument (like pitch shifting a guitar down an octave).
+      </p>
+    </div>
+  </div>
+
+  <div ng-mouseenter="showCompression=true" ng-mouseleave="showCompression=false" style="height: 630px; width: 400px; background-color: orange; display: inline-block; margin: 10px;">
+    <div ng-show="showCompression" style="border: 2px dotted black;">
+      <p>
+        <h3>Parallel Compression (Ducking)</h3>
+        Parallel compression, also known as New York compression, is a dynamic range compression technique used in sound recording and mixing. Parallel compression, a form of upward compression, is achieved by mixing an unprocessed 'dry', or lightly compressed signal with a heavily compressed version of the same signal. Rather than bringing down the highest peaks for the purpose of dynamic range reduction, it reduces the dynamic range by bringing up the softest sounds, adding audible detail.[1] It is most often used on stereo percussion buses in recording and mixdown, on electric bass, and on vocals in recording mixes and live concert mixes.
+      </p>
+      <p>
+        The human ear is sensitive to loud sounds being suddenly reduced in volume, but less so to soft sounds being increased in volume—parallel compression takes advantage of this difference. Unlike normal limiting and downward compression, fast transients in music are retained in parallel compression, preserving the "feel" and immediacy of a live performance. Because the method is less audible to the human ear, the compressor can be set aggressively, with high ratios for strong effect.
+      </p>
+      <p>
+        In an audio mix using an analog mixing console and analog compressors, parallel compression is achieved by sending a monophonic or stereo signal in two or more directions and then summing the multiple pathways, mixing them together by ear to achieve the desired effect. One pathway is straight to the summing mixer, while other pathways go through mono or stereo compressors, set aggressively for high-ratio gain reduction. The compressed signals are brought back to the summing mixer and blended in with the straight signal.
+      </p>
+    </div>
+  </div>
+
+</div>
