--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,13 @@ body {
 }
 
 .homeContainer {
-    background-image: url(/img/maschinestudio_2.png);
+    text-align: center;
+    height: 750px;
+    width: 1400px;
+    margin: 0 auto;
+    background-image: url(../img/maschinestudio_2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .flexyPhotos {
