--- a/views/news.html
+++ b/views/news.html
@@ -1,6 +1,15 @@
 <div class="panel" ng-repeat="result in results">
-  <h2>{{result.title}}</h2>
-  <h4>{{result.author}}</h4>
-  <h6>{{result.publishedAt}}</h6>
-  <p>{{result.description}}</p>
+  <div class="panel-header">
+    <h3><a href="{{result.url}}">{{result.title}}</a></h2>
+  </div>
+  <div class="panel-content">
+    <div>
+      <img class="news-pic" src="{{result.urlToImage}}" />
+    </div>
+    <div>
+      <h4>{{result.author}}</h4>
+      <h6>{{result.publishedAt}}</h6>
+      <p>{{result.description}}</p>
+    </div>
+  </div>
 </div>
