--- a/views/contact.html
+++ b/views/contact.html
@@ -1,10 +1,3 @@
-<h1>Projects</h1>
-<h2>Solo and Group Projects</h2>
+<h1>Contact the Ded</h1>
 
-<div class="list-group container">
-  <a href="https://joe-fridge.herokuapp.com/" class="list-group-item active">Fridge</a>
-  </a>
-  <a href="http://comingup.herokuapp.com/" class="list-group-item">ComingUp</a>
-  <a href="https://github.com/jmarzu" class="list-group-item">GitHub Profile</a>
-  <a href="https://www.linkedin.com/in/joe-marzullo-2978a075" class="list-group-item">LinkedIn Profile</a>
-</div>
+
