--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,11 @@
-<div class="title">
-  <h1>"I think I'm probably gonna quit music"</h1>
-  <cite>-Justin Bieber</cite>
-</div>
-<div class="nav">
-  <a href="/#/about" class="waves-effect waves-light btn-large cyan darken-1">About</a>
-  <a href="/#/music" class="waves-effect waves-light btn-large cyan darken-1">Music</a>
-  <a href="/#/gifs" class="waves-effect waves-light btn-large cyan darken-1">GIF's</a>
+<div class="ng-scope">
+  <div class="title">
+    <h1>"I think I'm probably gonna quit music"</h1>
+    <cite>-Justin Bieber</cite>
+  </div>
+  <div class="nav">
+    <a href="/#/about" class="waves-effect waves-light btn-large cyan darken-1">About</a>
+    <a href="/#/music" class="waves-effect waves-light btn-large cyan darken-1">Music</a>
+    <a href="/#/gifs" class="waves-effect waves-light btn-large cyan darken-1">GIF's</a>
+  </div>
 </div>
