--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,34 @@
-div {
-	border: solid 1px black;
+img {
+	height: 15em;
 }
-p,
-h1,
-h2,
-h3 {
-	border: solid 1px red;
-	box-sizing: border-box;
+imgBox {
+	width: 25%;
 }
-.img {
-	15em;
+.searchBarDiv {
+	display: flex;
+	justify-content: center;
+}
+#searchBar {
+	width: 50%;
+}
+.customRow {
+	margin: 0.5em 4em;
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-around;
+}
+.bottomRow p {
+	font-size: 2em;
+}
+.bottomRow h3 {
+	font-size: 2.25em;
+}
+.pokeName {
+	text-align: center;
+	font-size: 2em;
+}
+.descriptionText {
+	text-align: justify;
+	padding: 15px 40px;
+	font-size: 2em;
 }
