--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 h2{
     color: white;
 }
+h1{
+    color: black;
+    text-align: center;
+}
 body { 
     background-image: url("/img/joey.jpg");
     background-repeat: repeat;
