--- a/views/about.html
+++ b/views/about.html
@@ -14,9 +14,10 @@
     My World 2.0, in 2010. It debuted at or near number one in several countries, and was certified triple Platinum in the U.S., and
     contained his most successful single at the time, "Baby".</p>
     <div class="social">
-      <i class="fa fa-twitter fa-3x icon" aria-hidden="true"></i>
-      <i class="fa fa-facebook-square fa-3x icon" aria-hidden="true"></i>
-      <i class="fa fa-spotify fa-3x icon" aria-hidden="true"></i>
-      <i class="fa fa-youtube fa-3x icon" aria-hidden="true"></i>
+      <a href="https://twitter.com/justinbieber"><i class="fa fa-twitter fa-3x icon" aria-hidden="true" style="color:#1DA1F2;"></i></a>
+      <a href="https://www.facebook.com/JustinBieber/"><i class="fa fa-facebook-square fa-3x icon" aria-hidden="true" style="color:#3B5998"></i></a>
+      <a href="https://open.spotify.com/artist/1uNFoZAHBGtllmzznpCI3s"><i class="fa fa-spotify fa-3x icon" aria-hidden="true" style="color:#1ED760"></i></a>
+      <a href="https://www.youtube.com/user/JustinBieberVEVO"><i class="fa fa-youtube fa-3x icon" aria-hidden="true" style="color:#cc181e;"></i></a>
+      <a href="https://www.instagram.com/justinbieber/?hl=en"><i class="fa fa-instagram fa-3x icon" aria-hidden="true" style="color:#5851db"></i></a>
     </div>
   </div>
